--- a/css/style.css
+++ b/css/style.css
@@ -4,7 +4,7 @@
   box-sizing: border-box;
 }
 
-/* Custom Properties, update these for your own design */
+/* Custom Properties */
 
 :root {
   --ff-primary: "Source Sans Pro", sans-serif;
@@ -220,7 +220,6 @@ header {
 .nav__link {
   color: inherit;
   font-weight: var(--fw-bold);
-  /* font-size: var(--fs-h2); */
   font-size: 2em;
   text-decoration: none;
 }
@@ -563,12 +562,7 @@ header {
   justify-content: center;
   align-items: center;
   margin-bottom: 1.5em;
-  /* transition: all 500ms ease-in-out; */
 }
-
-/* .icon-container:hover {
-  transform: scale(1.15);
-} */
 
 .icon-container > img {
   width: 3em;
@@ -691,6 +685,18 @@ textarea {
   margin-right: auto;
 }
 
+.portfolio-skills-container {
+  margin: auto; 
+  margin-top: 1.5em;
+  max-width: 700px;
+}
+
+.portfolio-skills__subtitle {
+  font-weight: bold;
+  text-align: center;
+  margin-bottom: 2em;
+}
+
 /* Carousel */
 
 .carousel {
@@ -705,7 +711,7 @@ textarea {
 
 .carousel .carousel-item-visible {
   display: block;
-  animation: fadeVisibility 0.5s;
+  animation: fadeVisibility 0.7s;
 }
 
 .carousel .carousel-item img {
@@ -745,6 +751,9 @@ textarea {
 @keyframes fadeVisibility {
   0% {
     opacity: 0;
+  }
+  50% {
+    opacity: .8;
   }
   100% {
     opacity: 1;
