--- a/css/style.css
+++ b/css/style.css
@@ -845,6 +845,10 @@ textarea {
     opacity: 0;
     transform: translateY(-4rem) scale(.8);
   }
+  50% {
+    opacity: .8;
+    transform: none;
+  }
   100% {
     opacity: 1;
     transform: none;
