--- a/css/style.css
+++ b/css/style.css
@@ -429,6 +429,11 @@ header {
   animation: scroll-slide-right .7s 10s cubic-bezier(0,.9,.3,1.2) forwards;
 }
 
+.is-visible {
+  opacity: 1;
+  transform: translateX(-10rem);
+}
+
 .service {
   max-width: 500px;
   margin: 0 auto;
@@ -471,6 +476,22 @@ header {
   box-shadow: var(--bs);
 }
 
+
+/* About me animations */
+.animate-show-on-scroll {
+  opacity: 0;
+  transform: translateY(4em) rotateZ(-5deg);
+  transition: transform 4s .25s cubic-bezier(0, 1, .3, 1),
+              opacity .3s .25s ease-out;
+  will-change: transform, opacity;
+}
+
+.animate-show-on-scroll.is-visible {
+  opacity: 1;
+  transform: rotateZ(-2deg);
+}
+
+
 @media (min-width: 600px) {
   .about-me {
     display: grid;
@@ -505,6 +526,17 @@ header {
 
 /* Angle */
 
+.angle {
+  position: relative;
+}
+
+.angle:after {
+  content: "";
+  position: absolute;
+}
+
+/* Angle 2 */
+
 .angle2 {
   background-color: var(--clr-dark);
 }
@@ -535,14 +567,35 @@ header {
   width: 100%;
 }
 
-.angle {
-  position: relative;
+/* Angle 4 */
+
+.angle4 {
+  background-color: #fff
 }
 
-.angle:after {
-  content: "";
-  position: absolute;
+.angle4:after {
+  background-color: var(--clr-dark);
+  -webkit-clip-path: polygon(0 0, 100% 0, 100% 70%, 77% 100%, 12% 32%, 0 60%);
+  clip-path: polygon(0 0, 100% 0, 100% 70%, 77% 100%, 12% 32%, 0 80%);
 }
+
+@media (min-width: 900px) {
+  .angle4, .angle4:after {
+    height: 105px;
+  }
+}
+
+@media (min-width: 600px) {
+  .angle4, .angle4:after {
+    height: 75px;
+  }  
+}
+
+.angle4, .angle4:after {
+  height: 50px;
+  width: 100%;
+}
+
 
 /* My Work */
 
