--- a/css/style.css
+++ b/css/style.css
@@ -527,10 +527,11 @@ header {
 .repo-link {
   margin-left: 1.5em;
   color: var(--clr-accent);
+  text-decoration: none;
 }
 
 .repo-link:hover {
-  color: rgb(121, 202, 0);
+  text-decoration: underline;
 }
 
 
